# zond

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  interfaces.go
.circleci/: config.yml
accounts/abi/: abi.go  error.go  event.go  method.go  pack.go  type.go  unpack.go
address/: BUILD.bazel  addressstate.go
api/: BUILD.bazel  publicapi.go  ratelimiter.go  response.go
api/view/: BUILD.bazel  addressstate.go  block.go  evmcall.go  stake.go  transfer.go
block/: block.go
block/genesis/: generate.go  genesis.go
block/genesis/devnet/: genesis-yml-data.go  genesis.yml  prestate.yml
chain/: BUILD.bazel  chain.go
chain/block/: BUILD.bazel  block.go
chain/block/genesis/: BUILD.bazel  generate.go  genesis.go
chain/block/genesis/devnet/: BUILD.bazel  genesis-yml-data.go
chain/rewards/: BUILD.bazel  block.go
chain/transactions/: BUILD.bazel  attest.go  coinbase.go  protocol.go  stake.go  transaction.go  transfer.go
chain/transactions/pool/: BUILD.bazel  transaction.go  transactioninfo.go  txpoolpriorityqueue.go
cli/commands/: BUILD.bazel  dev.go  dilithiumkey.go  genesis.go  tx.go  wallet.go
cli/flags/: BUILD.bazel  flags.go
cmd/gzond/: BUILD.bazel  gzond.go
cmd/zond/: BUILD.bazel  zond.go
cmd/zond-cli/: BUILD.bazel  zond-cli.go
common/: types.go
common/mclock/: mclock.go
config/: BUILD.bazel  config.go
consensus/: BUILD.bazel  consensus.go  df.go  pos.go
core/: chain_indexer.go  error.go  events.go  evm.go  state_processor.go  state_transition.go
core/bloombits/: matcher.go
core/rawdb/: accessors_chain.go  accessors_snapshot.go  accessors_state.go  database.go  freezer.go  freezer_batch.go  freezer_meta.go  freezer_table.go  key_length_iterator.go  schema.go
core/state/: access_list.go  database.go  journal.go  metrics.go  state_object.go  statedb.go  trie_prefetcher.go
core/state/snapshot/: account.go  conversion.go  difflayer.go  disklayer.go  generate.go  iterator.go  iterator_fast.go  journal.go  snapshot.go  sort.go  wipe.go
core/types/: access_list_tx.go  block.go  bloom9.go  dynamic_fee_tx.go  gen_log_json.go  hashing.go  legacy_tx.go  log.go  receipt.go  state_account.go  transaction.go  transaction_signing.go
core/vm/: common.go  contract.go  contracts.go  eips.go  evm.go  gas_table.go  instructions.go  interface.go  interpreter.go  jump_table.go  logger.go  operations_acl.go  stack_table.go
core/vm/runtime/: env.go  runtime.go
crypto/: BUILD.bazel  crypto.go  dilithium.go  signature_cgo.go  xmss.go  xmss_test.go
crypto/bls12381/: utils.go
crypto/bn256/: bn256_fast.go
crypto/dilithium/: BUILD.bazel  dilithium.go
crypto/secp256k1/: dummy.go
db/: BUILD.bazel  db.go
errmsg/: errors.go
ethdb/leveldb/: leveldb.go
ethdb/memorydb/: memorydb.go
event/: subscription.go
internal/zondapi/: addrlock.go  api.go  backend.go  transaction_args.go
keys/: BUILD.bazel  dilithium.go  staking.go
log/: format.go
metadata/: BUILD.bazel  block.go  blockreceipts.go  dilithium.go  epoch.go  epochblockhashes.go  mainchain.go  metadata.go  otsindex.go  peerdata.go  peerinfo.go  protocoltransaction.go  slave.go  slotvalidators.go  transaction.go
metrics/: cpu_enabled.go  cputime_unix.go  metrics.go
metrics/influxdb/: influxdb.go
metrics/prometheus/: prometheus.go
misc/: BUILD.bazel  helper.go  helper_test.go  logrotator.go  transactionlist.go
node/: config.go  defaults.go  endpoints.go  errors.go  jwt_handler.go  lifecycle.go  node.go  rpcstack.go
ntp/: BUILD.bazel  ntp.go
p2p/: BUILD.bazel  downloader.go  message.go  messagerequest.go  mr.go  outgoingmessage.go  peer.go  peerclient.go  peerserver.go  server.go
p2p/messages/: BUILD.bazel  registermessage.go
params/: config.go
proto/p2p/: BUILD.bazel  services.pb.go  services.proto
protos/: BUILD.bazel  address.pb.go  address.proto  block.pb.go  block.proto  dilithiumkeys.pb.go  dilithiumkeys.proto  metadata.pb.go  metadata.proto  p2p.pb.go  p2p.proto  prestate.pb.go  prestate.proto  stakingkeys.pb.go  stakingkeys.proto  transaction.pb.go  transaction.proto  wallet.pb.go  wallet.proto
rlp/: decode.go  encode.go  typecache.go
rpc/: client.go  endpoints.go  handler.go  ipc.go  ipc_unix.go  metrics.go  server.go  service.go  types.go  websocket.go
scripts/: update-devnet-genesis.sh  update-pbs.sh
state/: BUILD.bazel  state.go  statecontext.go
storagekeys/: block.go
transactions/: attest.go  coinbase.go  protocol.go  stake.go  transaction.go  transfer.go  type.go
transactions/pool/: transaction.go  transactioninfo.go  txpoolpriorityqueue.go
trie/: committer.go  database.go  errors.go  hasher.go  iterator.go  node.go  node_enc.go  proof.go  secure_trie.go  stacktrie.go  trie.go
wallet/: BUILD.bazel  wallet.go
zond/: api_backend.go  backend.go
zond/filters/: api.go  filter.go  filter_system.go
zond/tracers/: api.go  tracers.go
zond/tracers/logger/: logger.go
