load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "df.go",
        "pos.go",
    ],
    importpath = "github.com/theQRL/zond/consensus",
    visibility = ["//visibility:public"],
    deps = [
        "//address:go_default_library",
        "//chain:go_default_library",
        "//chain/block:go_default_library",
        "//chain/transactions:go_default_library",
        "//config:go_default_library",
        "//crypto/dilithium:go_default_library",
        "//db:go_default_library",
        "//keys:go_default_library",
        "//metadata:go_default_library",
        "//misc:go_default_library",
        "//ntp:go_default_library",
        "//p2p:go_default_library",
        "//protos:go_default_library",
        "//state:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
