load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dilithium.go",
        "xmss.go",
    ],
    importpath = "github.com/theQRL/zond/crypto",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["xmss_test.go"],
    embed = [":go_default_library"],
)
