load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["xmss.go"],
    importpath = "github.com/theQRL/zond/crypto",
    visibility = ["//visibility:public"],
    deps = [
        "//misc:go_default_library",
        "@com_github_theqrl_qrllib//goqrllib/goqrllib:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["xmss_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//misc:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_theqrl_qrllib//goqrllib/goqrllib:go_default_library",
    ],
)
