load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["dilithium.go"],
    importpath = "github.com/theQRL/zond/keys",
    visibility = ["//visibility:public"],
    deps = [
        "//misc:go_default_library",
        "//protos:go_default_library",
        "@com_github_theqrl_go_qrllib//dilithium:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
)
