load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "block.go",
        "dilithium.go",
        "epoch.go",
        "epochblockhashes.go",
        "mainchain.go",
        "metadata.go",
        "otsindex.go",
        "peerdata.go",
        "peerinfo.go",
        "slave.go",
    ],
    importpath = "github.com/theQRL/zond/metadata",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//db:go_default_library",
        "//ntp:go_default_library",
        "//protos:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
)
