load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["helper.go"],
    importpath = "github.com/theQRL/zond/misc",
    visibility = ["//visibility:public"],
    deps = ["@com_github_theqrl_qrllib//goqrllib/goqrllib:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["helper_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
