load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ntp.go"],
    importpath = "github.com/theQRL/zond/ntp",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "@com_github_beevik_ntp//:go_default_library",
    ],
)
