load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "downloader.go",
        "message.go",
        "messagerequest.go",
        "mr.go",
        "outgoingmessage.go",
        "peer.go",
        "server.go",
    ],
    importpath = "github.com/theQRL/zond/p2p",
    visibility = ["//visibility:public"],
    deps = [
        "//chain:go_default_library",
        "//chain/block:go_default_library",
        "//chain/transactions:go_default_library",
        "//chain/transactions/pool:go_default_library",
        "//config:go_default_library",
        "//metadata:go_default_library",
        "//misc:go_default_library",
        "//ntp:go_default_library",
        "//p2p/messages:go_default_library",
        "//protos:go_default_library",
        "@com_github_deckarep_golang_set//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_willf_bloom//:go_default_library",
    ],
)
