load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protos_proto",
    srcs = [
        "address.proto",
        "block.proto",
        "dilithiumkeys.proto",
        "metadata.proto",
        "p2p.proto",
        "prestate.proto",
        "transaction.proto",
        "wallet.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protos_go_proto",
    importpath = "github.com/theQRL/zond/protos",
    proto = ":protos_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":protos_go_proto"],
    importpath = "github.com/theQRL/zond/protos",
    visibility = ["//visibility:public"],
)
