load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "state.go",
        "statecontext.go",
    ],
    importpath = "github.com/theQRL/zond/state",
    visibility = ["//visibility:public"],
    deps = [
        "//address:go_default_library",
        "//config:go_default_library",
        "//db:go_default_library",
        "//metadata:go_default_library",
        "//misc:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_theqrl_go_qrllib//xmss:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
    ],
)
