load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["wallet.go"],
    importpath = "github.com/theQRL/zond/wallet",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto:go_default_library",
        "@com_github_theqrl_qrllib//goqrllib/goqrllib:go_default_library",
    ],
)
