load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "attest.go",
        "coinbase.go",
        "protocol.go",
        "stake.go",
        "transaction.go",
        "transfer.go",
    ],
    importpath = "github.com/theQRL/zond/chain/transactions",
    visibility = ["//visibility:public"],
    deps = [
        "//chain/rewards:go_default_library",
        "//config:go_default_library",
        "//metadata:go_default_library",
        "//misc:go_default_library",
        "//protos:go_default_library",
        "//state:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_theqrl_go_qrllib//dilithium:go_default_library",
        "@com_github_theqrl_go_qrllib//xmss:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
)
