load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["zond.go"],
    importpath = "github.com/theQRL/zond/cmd/zond",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//chain:go_default_library",
        "//config:go_default_library",
        "//consensus:go_default_library",
        "//db:go_default_library",
        "//misc:go_default_library",
        "//p2p:go_default_library",
        "//state:go_default_library",
        "@com_github_libp2p_go_libp2p_core//crypto:go_default_library",
        "@com_github_mattn_go_colorable//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_theqrl_go_libp2p_qrl//crypto:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
    ],
)

go_binary(
    name = "zond",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
