load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["zond.go"],
    importpath = "github.com/theQRL/zond/cmd/zond",
    visibility = ["//visibility:public"],
    deps = [
        "//chain:go_default_library",
        "//config:go_default_library",
        "//p2p:go_default_library",
        "//state:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "zond",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
