load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "generate.go",
        "genesis.go",
    ],
    importpath = "github.com/theQRL/zond/chain/block/genesis",
    visibility = ["//visibility:public"],
    deps = [
        "//address:go_default_library",
        "//chain/block:go_default_library",
        "//chain/block/genesis/devnet:go_default_library",
        "//chain/transactions:go_default_library",
        "//config:go_default_library",
        "//crypto:go_default_library",
        "//crypto/dilithium:go_default_library",
        "//db:go_default_library",
        "//metadata:go_default_library",
        "//misc:go_default_library",
        "//protos:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
)
