load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "transaction.go",
        "transactioninfo.go",
        "txpoolpriorityqueue.go",
    ],
    importpath = "github.com/theQRL/zond/chain/transactions/pool",
    visibility = ["//visibility:public"],
    deps = [
        "//chain/block:go_default_library",
        "//chain/transactions:go_default_library",
        "//config:go_default_library",
        "//misc:go_default_library",
        "//ntp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
