load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")

go_embed_data(
    name = "genesis-yml-data",
    package = "devnet",
    var = "DevnetGenesisData",
    srcs = [
        "genesis.yml",
        "prestate.yml",
    ],
    flatten = True,
)

go_library(
    name = "go_default_library",
    srcs = ["genesis-yml-data.go"],
    importpath = "github.com/theQRL/zond/chain/block/genesis/devnet",
    visibility = ["//visibility:public"],
)
